syntax = "proto3";

import "svg.proto";

package transport_catalog_serialize;

message RenderSettings {
    double width = 1;
    double height = 2;
    double padding = 3;
    double line_width = 4;
    double stop_radius = 5;

    double bus_label_font_size = 6;
    double bus_label_offset_x = 7;
    double bus_label_offset_y = 8;

    double stop_label_font_size = 9;
    double stop_label_offset_x = 10;
    double stop_label_offset_y = 11;

    Color underlayer_color = 12;
    double underlayer_width = 13;

    repeated Color color_palette = 14;
}
